# mmlib

./: .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYING  Makefile.am  README.md  TODO.md  autogen.sh  autoheader.yml  configure.ac  groups  johnny-config.json  meson.build  meson_options.txt  project.config  read_version.py  webhooks.config
config/api-exports/: meson.build
config/autools-compat/: meson.build
config/windows/: meson.build
data/: Makefile.am
data/mindmaze/: 268B634DA2374A43F3E3C177B0AC5D21C2072127.sig  4159918692C24F700C08C6CF7E374C28E074F5A8.sig
debian/: .gitignore  changelog  control  copyright  libmmlib-dev.install  libmmlib-doc.install  libmmlib0.install  libmmlib0.symbols  libmmlib1.install  libmmlib1.symbols  mmlib-doc.doc-base  mmlib-doc.docs  rules
doc/: .gitignore  Makefile.am  alloc.rst  argparse.rst  conf.py  design.rst  dlfcn.rst  env.rst  error.rst  examples.rst  filesystem.rst  index.rst  ipc.rst  lock_server_init.dia  lock_server_wait_lock.dia  log.rst  meson.build  mm_log_fatal.3  mm_log_warn.3  mm_tic.3  mmlib_perm_modes.7  mmlicense.1  mmlog_fatal.3  mmlog_info.3  mmlog_log.3  mmprofile_print.3  mmprofile_reset.3  mmtic.3  mmtoc_label.3  process.rst  profiling.rst  socket.rst  thread.rst  time.rst  type.rst
doc/examples/: completion_parse_args  multithread.c  parse_args.c  pshared-child.c  pshared-common.h  pshared-parent.c
extra/cmake/: CheckVisibility.cmake  FindPthread.cmake
extra/m4/: api-exports.m4  mm_pthread.m4  mmcheck_lib.m4
m4/: .gitignore  api-exports.m4  host-system.m4  mm-check.m4  mm-gendef.m4  mm-warnings.m4  pkg-ext.m4
mmpack/: create_srcdir_hook  libmmlib0.provides  libmmlib1.provides  specs
po/: .gitignore  LINGUAS  Makevars  POTFILES.in  de.po  fr.po  it.po  meson.build  mmlib.pot
src/: CMakeLists.txt  Makefile.am  alloc.c  argparse.c  atomic-win32.h  clock-win32.c  clock-win32.h  dlfcn.c  env-win32.c  error-internal.h  error.c  file-internal.h  file-posix.c  file-win32.c  file.c  geometry.c  libmmlib.map  license-check.c  license.c  license.h  local-ipc-posix.c  local-ipc-win32.c  local-ipc-win32.h  lock-referee-proto.h  lock-referee-server.c  log.c  meson.build  mmargparse.h  mmdlfcn.h  mmdns.h  mmerrno.h  mmgeometry.c  mmgeometry.h  mmlib.h  mmlicense.c  mmlog.h  mmpredefs.h  mmprofile.h  mmskeleton.h  mmsysio.h  (+31 more)
tests/: .gitignore  CMakeLists.txt  Makefile.am  alloc-api-tests.c  api-testcases.h  argparse-api-tests.c  child-proc.c  dirtests.c  dlfcn-api-tests.c  dynlib-api.h  dynlib-test.c  dynlib.h  file-api-tests.c  file_advanced_tests.c  geometry-api-tests.c  internals-testcases.h  ipc-api-tests-exported.c  ipc-api-tests-exported.h  ipc-api-tests.c  log-internals.c  meson.build  perflock.c  process-api-tests.c  process-testlib.c  process-testlib.h  shm-api-tests.c  socket-api-tests.c  socket-testlib.c  socket-testlib.h  startup-win32-internals.c  testapi.c  testdlfcn.c  testerrno.c  testfile.c  testgeometry.c  testinternals.c  testlog.c  testprocess.c  testprofile.c  tests-child-proc.c  (+9 more)
tests/handmaid/: Makefile.am  handmaid.c  lib_handmaid.c  lib_handmaid.h  meson.build
tests/tokens/: 58AFC58478D6349E7408956A768A8D9F0C77CB37.sig  EBBC47D1D49D3A4F3405DD72766A29515F93912F.sig
tools/: abi-diff.sh  api-compat-test.sh  check-doc.sh  codespell-ignore  copyright_autoheader  expand_headers  meson.build  mindmaze-uncrustify.cfg  pre-commit  uncrustify.cfg
